// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput component matches snapshot (default) 1`] = `
<Fragment>
  <label
    className="fdsTextInput-root"
  >
    <div
      className="fdsTextInput-label"
    />
    <DecoratedInput>
      <IconInput>
        <input
          className="fdsTextInput"
          onChange={[Function]}
          type="text"
        />
      </IconInput>
    </DecoratedInput>
  </label>
</Fragment>
`;

exports[`TextInput component matches snapshot (default) 2`] = `
<Fragment>
  <label
    className="fdsTextInput-root"
  >
    <div
      className="fdsTextInput-label"
    >
      label
    </div>
    <DecoratedInput
      after="after"
      before="before"
    >
      <IconInput
        IconLeft={[Function]}
        IconRight={[Function]}
      >
        <input
          aria-label="label"
          className="fdsTextInput error"
          onChange={[Function]}
          required={true}
          type="number"
        />
      </IconInput>
    </DecoratedInput>
  </label>
  <div
    className="color--red type--data"
  >
    errorText
  </div>
</Fragment>
`;
